apps/pocketbase/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pocketbase
  namespace: pocketbase
spec:
  selector:
    app: pocketbase
  ports:
    - name: http
      port: 80
      targetPort: 8090
